test/errors/offsets_error/zs/unary_operator_error.zs
package unary_operator_error;

struct UnaryOperatorError
{
    uint32 offset;
+offset:
    string field;
};
